Update: latest changes

--- a/previous-events.html
+++ b/previous-events.html
@@ -239,24 +239,38 @@
     <div class="preview-container">
       <!-- Preview Card 1 -->
       <div class="preview-card">
-          <img src="images/ganesh.jpeg" alt="Sri Vidya Ganapati Temple">
-          <div class="title">ಸಾಮೂಹಿಕ ಸಂಕಷಕ್ಟಹರ ಗಣಪತಿ ಪೂಜ</div>
-          <a href="ganesh.html" class="explore-btn">Explore More</a>
+          <img src="images/koti-2.jpg" alt="Sri Vidya Ganapati Temple">
+          <div class="title">Terah Koti Ramanama Lekhana Yagna</div>
+          <a href="koti.html" class="explore-btn">Explore More</a>
       </div>
 
       <!-- Preview Card 2 -->
       <div class="preview-card">
-          <img src="https://files.yappe.in/place/full/kudlur-sri-rama-temple-10203432.webp" alt="Sri Vidya Ganapati Temple">
-          <div class="title">ಸಾಮೂಹಿಕ ಶ್ರೀ ಸತ್ಯನಾರಾಯಣ ಪೂಜ</div>
-          <a href="satyanarayana-pooja.html" class="explore-btn">Explore More</a>
+          <img src="images/r-2.jpg" alt="Sri Vidya Ganapati Temple">
+          <div class="title">Ramayana Spardhe</div>
+          <a href="ramayana.html" class="explore-btn">Explore More</a>
       </div>
 
       <!-- Preview Card 3 -->
       <div class="preview-card">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2OP9qExVAqr1IHQ8dmZNIGWbTKhdtRzEVMRmCZyW0ieSvke3pnhFtLqCPrfhFi1dDLZU&usqp=CAU" alt="Sri Vidya Ganapati Temple">
-          <div class="title">ಸಾಮೂಹಿಕ ಶ್ರೀ ನವಗ್ರಹ ಹೋಮ ಪೂಜ</div>
-          <a href="navagraha-homa.html" class="explore-btn">Explore More</a>
+          <img src="images/v-2.jpg" alt="Sri Vidya Ganapati Temple">
+          <div class="title">Upanyasa in Hindu Temples</div>
+          <a href="Upanyasa.html" class="explore-btn">Explore More</a>
       </div>
+
+      <div class="preview-card">
+        <img src="images/u-2.jpg" alt="Sri Vidya Ganapati Temple">
+        <div class="title">Vaikunta Ekadashi</div>
+        <a href="vaikunta.html" class="explore-btn">Explore More</a>
+    </div>
+
+    <!-- Preview Card 3 -->
+    <div class="preview-card">
+        <img src="images/j-1.jpg" alt="Sri Vidya Ganapati Temple">
+        <div class="title">Jayarama Dinadarshi</div>
+        <a href="Dinadarshi.html" class="explore-btn">Explore More</a>
+    </div>
+
     </div>
   </div>
 
